--- a/assest/style.css
+++ b/assest/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -9,17 +10,74 @@ body{
 
 .navbar{
     display: flex;
-    flex-direction: row;
-}
-
-.navbar{
+    align-content: center;
     background-color: blue;
 }
 
-.fa-car, .fa-bars, p{
-    color: white;
-    margin: 10px;
+.imagenes{
+     box-shadow: 3px 3px 10px #a5f0ed;
 }
-.fa-bars{
-   padding-left: 100px;
+
+.fa-car, .fa-bars, p{
+    color: rgb(255, 255, 255);
+}
+
+.text{
+    color: black;
+    text-align: center;
+}
+.header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(215, 210, 210);
+}
+
+.formt{
+    width: 70%;
+    text-align: center;
+    margin-bottom: 15px;
+    padding: 10px;
+}
+
+h4{
+    text-align: center;
+}
+
+ .btn{
+    margin-bottom: 5px;
+ }
+
+ ul.pagination {
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+}
+
+ul.pagination li {
+    display: inline;}
+
+ul.pagination li a {
+    color: rgb(13, 201, 230);
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    border: 1px solid #d3d1d1;
+    align-items: center;
+}
+
+.pag {
+    text-align: center;
+    margin-top: 20px;
+}
+
+footer{
+    background-color: blue;
+    color: white;
+    text-align: center;
+}
+
+.fa-brands{
+    margin: 5px;
+    color: white;
 }
